[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/states/enemy/Attack.gd" type="Script" id=1]
[ext_resource path="res://src/entities/enemies/EnemyScissors.gd" type="Script" id=2]
[ext_resource path="res://src/states/enemy/Chase.gd" type="Script" id=3]
[ext_resource path="res://src/states/enemy/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/states/enemy/Move.gd" type="Script" id=5]
[ext_resource path="res://src/states/StatesMachine.gd" type="Script" id=6]
[ext_resource path="res://src/states/enemy/Death.gd" type="Script" id=7]
[ext_resource path="res://assets/entities/enemies/scissors_simplified-Sheet.png" type="Texture" id=8]
[ext_resource path="res://src/UI/healthBar.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=119]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=120]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=121]
resource_name = "move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=115]
radius = 8.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=116]
radius = 20.0
height = 24.0

[sub_resource type="CircleShape2D" id=117]
radius = 192.003

[sub_resource type="GDScript" id=118]
script/source = "extends TextureRect

func _ready():
	$TextureProgress.value = 100


func take_damage(health, max_health, damage_value):
	health = health - damage_value
	if health < 0: return 0
	set_percent_value(health / max_health * 100)
	return health 

func set_percent_value(value):
	$TextureProgress.value = value
"

[node name="EnemyScissors" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 11
collision_mask = 11
script = ExtResource( 2 )

[node name="StatesMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Chase")

[node name="Chase" type="Node" parent="StatesMachine"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StatesMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StatesMachine"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="Death" type="Node" parent="StatesMachine"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 8 )
hframes = 4
vframes = 2

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 119 )
anims/idle = SubResource( 120 )
anims/move = SubResource( 121 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 115 )

[node name="HitRange" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -48 )
rotation = -1.5708
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRange"]
position = Vector2( -19, -6.86646e-05 )
rotation = -3.14159
shape = SubResource( 116 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( -2, -49 )
collision_layer = 11
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 12 )
shape = SubResource( 117 )

[node name="Raycasts" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -37 )

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -22 )
enabled = true
cast_to = Vector2( 250, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 250, 0 )
collision_mask = 9

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 33 )
enabled = true
cast_to = Vector2( 250, 0 )
collision_mask = 9

[node name="HealthBar" parent="." instance=ExtResource( 10 )]
margin_left = -16.0
margin_top = -99.0
margin_right = 16.0
margin_bottom = -67.0
script = SubResource( 118 )
